Fix newsletter input size on smaller screens

--- a/app/_assets/_scss/_components.newsletter.scss
+++ b/app/_assets/_scss/_components.newsletter.scss
@@ -35,4 +35,5 @@
 
     .newsletter__input {
         @extend %input;
+        width: 100%;
     }
